force-app/main/default/objects/Concession__c/Concession__c.object-meta.xml
<CustomObject>
    <description>Concessions logged for an Opportunity (request for discounted pricing) - US-1606</description>
    <label>Concession</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Concession #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>