force-app/main/default/objects/Concession__c/fields/Ad_Valorem__c.field-meta.xml
<CustomField>
    <fullName>Ad_Valorem__c</fullName>
    <description>A fee dependent on the value of the transaction, as a percentage</description>
    <inlineHelpText>A fee dependent on the value of the transaction, as a percentage</inlineHelpText>
    <label>Ad Valorem (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>