force-app/main/default/objects/Concession__c/fields/ANA_ATM_Cash_Turnover__c.field-meta.xml
<CustomField>
    <fullName>ANA_ATM_Cash_Turnover__c</fullName>
    <label>ANA/ATM Cash Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>