force-app/main/default/objects/Concession__c/fields/ANA_ATM_Cash_Volume__c.field-meta.xml
<CustomField>
    <fullName>ANA_ATM_Cash_Volume__c</fullName>
    <label>ANA/ATM Cash Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>