force-app/main/default/objects/Concession__c/fields/Average_Cash_Withdrawal_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Cash_Withdrawal_Price__c</fullName>
    <description>The average price of cash withdrawals</description>
    <inlineHelpText>The average price of cash withdrawals</inlineHelpText>
    <label>Average Cash Withdrawal Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>