force-app/main/default/objects/Concession__c/fields/Average_Cheque_Encashment_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Cheque_Encashment_Price__c</fullName>
    <description>The average price of cheques cashed</description>
    <inlineHelpText>The average price of cheques cashed</inlineHelpText>
    <label>Average Cheque Encashment Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>