force-app/main/default/objects/Concession__c/fields/Average_Cheque_Issuing_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Cheque_Issuing_Price__c</fullName>
    <description>The average price of cheques issued</description>
    <inlineHelpText>The average price of cheques issued</inlineHelpText>
    <label>Average Cheque Issuing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>