force-app/main/default/objects/Concession__c/fields/Average_FBC_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_FBC_Price__c</fullName>
    <description>The average price paid on Future Bills of Collection</description>
    <inlineHelpText>The average price paid on Future Bills of Collection</inlineHelpText>
    <label>Average FBC Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>