force-app/main/default/objects/Concession__c/fields/Average_FBC_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_FBC_Value__c</fullName>
    <description>The average value of Future Bills of Collection</description>
    <inlineHelpText>The average value of Future Bills of Collection</inlineHelpText>
    <label>Average FBC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>