force-app/main/default/objects/Concession__c/fields/Average_LC_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_LC_Price__c</fullName>
    <description>The average price paid on Letters of Credit</description>
    <inlineHelpText>The average price paid on Letters of Credit</inlineHelpText>
    <label>Average LC Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>