force-app/main/default/objects/Concession__c/fields/Average_LC_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_LC_Value__c</fullName>
    <description>The average value of Letters of Credit</description>
    <inlineHelpText>The average value of Letters of Credit</inlineHelpText>
    <label>Average LC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>