force-app/main/default/objects/Concession__c/fields/Average_OD_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Average_OD_Utilisation__c</fullName>
    <description>Overdraft Only: The average utilisation of an overdraft , as a percentage</description>
    <inlineHelpText>Overdraft Only: The average utilisation of an overdraft , as a percentage</inlineHelpText>
    <label>Average OD Utilisation (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>