force-app/main/default/objects/Concession__c/fields/Average_TT_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_TT_Price__c</fullName>
    <description>The average price paid on inward and outward telegraphic transfers</description>
    <inlineHelpText>The average price paid on inward and outward telegraphic transfers</inlineHelpText>
    <label>Average TT Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>