force-app/main/default/objects/Concession__c/fields/Average_TT_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_TT_Value__c</fullName>
    <description>The average value of inward and outward telegraphic transfers</description>
    <inlineHelpText>The average value of inward and outward telegraphic transfers</inlineHelpText>
    <label>Average TT Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>