force-app/main/default/objects/Concession__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>The balance of the particular investment</description>
    <inlineHelpText>The balance of the particular investment</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>