force-app/main/default/objects/Concession__c/fields/Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate__c</fullName>
    <description>The flat fee charged per deposit</description>
    <inlineHelpText>The flat fee charged per deposit</inlineHelpText>
    <label>Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>