force-app/main/default/objects/Concession__c/fields/BOL_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>BOL_Transaction_Type__c</fullName>
    <description>The type of transaction the concession is</description>
    <inlineHelpText>The type of transaction the concession is</inlineHelpText>
    <label>BOL Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transaction_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Verification System Manual (AVS)</fullName>
            </value>
            <value>
                <fullName>BEFT Debits</fullName>
            </value>
            <value>
                <fullName>Bulk Electonic Funds Transfer Credits (BEFT Credits)</fullName>
            </value>
            <value>
                <fullName>Commission - Hybrid</fullName>
            </value>
            <value>
                <fullName>Database development (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Monthly Management Fee</fullName>
            </value>
            <value>
                <fullName>Monthly minimum (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>NAEDO Processed</fullName>
            </value>
            <value>
                <fullName>NAEDO Tracking</fullName>
            </value>
            <value>
                <fullName>Next Day Pay</fullName>
            </value>
            <value>
                <fullName>Outward Telegraphic Transfers</fullName>
            </value>
            <value>
                <fullName>Per client Identification Number (CIN) per month (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Per transaction Other Banks 0 - 10,000 (MyBills)</fullName>
            </value>
            <value>
                <fullName>Per transaction Other Banks  10,001 - 50,000 (MyBills)</fullName>
            </value>
            <value>
                <fullName>Per transaction Other Banks  100,000+ (MyBills)</fullName>
            </value>
            <value>
                <fullName>Per transaction Other Banks  50,001 - 100,000 (MyBills)</fullName>
            </value>
            <value>
                <fullName>Per transaction SBSA 0 - 30 (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Per transaction SBSA 1,001 - 5,000 (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Per transaction SBSA 10,0001+ (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Per transaction SBSA 31 – 1000 (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Per transaction SBSA 5,001 - 10,000 (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Per transaction with database (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Per transaction without database (Electronic RRS - Receipt Referencing Service)</fullName>
            </value>
            <value>
                <fullName>Real Time Account Verification Via Bol Off-Us (AVS)</fullName>
            </value>
            <value>
                <fullName>Real Time Account Verification Via Bol On-Us (AVS)</fullName>
            </value>
            <value>
                <fullName>Real Time Clearing</fullName>
            </value>
            <value>
                <fullName>Real Time Gross Settlement (RTGS) - Payments - Mandatory</fullName>
            </value>
            <value>
                <fullName>Real Time Gross Settlement (RTGS) - Urgent Payment</fullName>
            </value>
            <value>
                <fullName>Same Day Adhoc/Pre Loaded Other Banks</fullName>
            </value>
            <value>
                <fullName>Same Day Adhoc/Pre Loaded Standard Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>