force-app/main/default/objects/Concession__c/fields/BOL_User_ID__c.field-meta.xml
<CustomField>
    <fullName>BOL_User_ID__c</fullName>
    <description>The user reference that identifies the BOL customer</description>
    <inlineHelpText>The user reference that identifies the BOL customer</inlineHelpText>
    <label>BOL User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>