force-app/main/default/objects/Concession__c/fields/Cash_Acquiring_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cash_Acquiring_Base_Rate__c</fullName>
    <description>The cash acquiring flat fee charged per deposit</description>
    <inlineHelpText>The cash acquiring flat fee charged per deposit</inlineHelpText>
    <label>Cash Acquiring Base Rate</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cash_Acquiring_Channel_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>