force-app/main/default/objects/Concession__c/fields/Cash_Acquiring_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Cash_Acquiring_Channel_Type__c</fullName>
    <description>The cash acquiring type of channel used for the deposits</description>
    <inlineHelpText>The cash acquiring type of channel used for the deposits</inlineHelpText>
    <label>Cash Acquiring Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Channels</fullName>
            </value>
            <value>
                <fullName>ANA / ATM</fullName>
            </value>
            <value>
                <fullName>Autosafe</fullName>
            </value>
            <value>
                <fullName>Autosafe &amp; Cash Centre Only</fullName>
            </value>
            <value>
                <fullName>Branch Only</fullName>
            </value>
            <value>
                <fullName>Bulk Teller</fullName>
            </value>
            <value>
                <fullName>Cash Centre Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>