force-app/main/default/objects/Concession__c/fields/Cash_Value__c.field-meta.xml
<CustomField>
    <fullName>Cash_Value__c</fullName>
    <description>Amount of cash deposits</description>
    <inlineHelpText>Amount of cash deposits</inlineHelpText>
    <label>Cash Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>