force-app/main/default/objects/Concession__c/fields/Cash_Volume__c.field-meta.xml
<CustomField>
    <fullName>Cash_Volume__c</fullName>
    <description>The number of cash deposits</description>
    <inlineHelpText>The number of cash deposits</inlineHelpText>
    <label>Cash Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>