force-app/main/default/objects/Concession__c/fields/CFC_Account__c.field-meta.xml
<CustomField>
    <fullName>CFC_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a Forgeign Currency Account?</description>
    <inlineHelpText>Is this a Forgeign Currency Account?</inlineHelpText>
    <label>CFC Account</label>
    <type>Checkbox</type>
</CustomField>