force-app/main/default/objects/Concession__c/fields/CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>CIF_Number__c</fullName>
    <description>(CIF) Unique number that identifies the Client at Group level</description>
    <formula>Opportunity__r.Account.CIF__c</formula>
    <inlineHelpText>(CIF) Unique number that identifies the Client at Group level</inlineHelpText>
    <label>CIF Number</label>
    <type>Text</type>
</CustomField>