force-app/main/default/objects/Concession__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>Sub entity name of the Client</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Opportunity__r.Account.Id, Opportunity__r.Account.Name)</formula>
    <inlineHelpText>Sub entity name of the Client</inlineHelpText>
    <label>Client</label>
    <type>Text</type>
</CustomField>