force-app/main/default/objects/Concession__c/fields/Client_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sector__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Client_Sector__c)</formula>
    <label>Client Sector</label>
    <type>Text</type>
</CustomField>