force-app/main/default/objects/Concession__c/fields/Client_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sub_Sector__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Client_Sub_Sector__c )</formula>
    <label>Client Sub-Sector</label>
    <type>Text</type>
</CustomField>