force-app/main/default/objects/Concession__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>The rate charged on Merchant turnover, as a percentage</description>
    <inlineHelpText>The rate charged on Merchant turnover, as a percentage</inlineHelpText>
    <label>Commission Rate (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>