force-app/main/default/objects/Concession__c/fields/Concession_owner_s_manager__c.field-meta.xml
<CustomField>
    <fullName>Concession_owner_s_manager__c</fullName>
    <formula>IF(!ISBLANK( Opportunity__r.Opportunity_Owner__c ) &amp;&amp; !ISBLANK( Opportunity__r.Owner.ManagerId ), Opportunity__r.Owner.Manager.FirstName  &amp; &quot; &quot; &amp;  Opportunity__r.Owner.Manager.LastName , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concession owner&apos;s manager</label>
    <type>Text</type>
</CustomField>