force-app/main/default/objects/Concession__c/fields/Concession_owner_s_manager_email__c.field-meta.xml
<CustomField>
    <fullName>Concession_owner_s_manager_email__c</fullName>
    <formula>Opportunity__r.Owner.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concession owner&apos;s manager email</label>
    <type>Text</type>
</CustomField>