force-app/main/default/objects/Concession__c/fields/Concession_owner_s_manager_phone__c.field-meta.xml
<CustomField>
    <fullName>Concession_owner_s_manager_phone__c</fullName>
    <formula>Opportunity__r.Owner.Manager.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concession owner&apos;s manager phone</label>
    <type>Text</type>
</CustomField>