force-app/main/default/objects/Concession__c/fields/Credit_Weighted_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Credit_Weighted_Average_Price__c</fullName>
    <description>The average price paid on credit transactions</description>
    <inlineHelpText>The average price paid on credit transactions</inlineHelpText>
    <label>Credit Weighted Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>