force-app/main/default/objects/Concession__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <description>Track the date the concession has been approved</description>
    <inlineHelpText>Track the date the concession has been approved</inlineHelpText>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>