force-app/main/default/objects/Concession__c/fields/Days_to_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expiry__c</fullName>
    <description>Displays the number of days left before an active concession is due to expire</description>
    <formula>IF(  TEXT(Status__c ) = &quot;Active&quot; , End_Date__c - TODAY(), null)</formula>
    <inlineHelpText>Displays the number of days left before an active concession is due to expire</inlineHelpText>
    <label>Days to Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>