force-app/main/default/objects/Concession__c/fields/Debit_Weighted_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Debit_Weighted_Average_Price__c</fullName>
    <description>The average price paid on debit transactions</description>
    <inlineHelpText>The average price paid on debit transactions</inlineHelpText>
    <label>Debit Weighted Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>