force-app/main/default/objects/Concession__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Concession expiration date</description>
    <inlineHelpText>Concession expiration date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>