force-app/main/default/objects/Concession__c/fields/Generate_Concession_Letter__c.field-meta.xml
<CustomField>
    <fullName>Generate_Concession_Letter__c</fullName>
    <formula>HYPERLINK(&quot;/apex/wrapperConcessionOpportunity?id=&quot; &amp;Opportunity__r.Id, &quot;Generate Concession Letter&quot; , &quot;_self&quot;)</formula>
    <label>Generate Concession Letter</label>
    <type>Text</type>
</CustomField>