force-app/main/default/objects/Concession__c/fields/Initiation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Fee__c</fullName>
    <description>Fee charged to originate the facility as a percentage</description>
    <inlineHelpText>Fee charged to originate the facility as a percentage</inlineHelpText>
    <label>Initiation Fee (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>