force-app/main/default/objects/Concession__c/fields/Interest_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Interest_To_Client__c</fullName>
    <description>The interest rate paid for the investment value, as a percentage</description>
    <inlineHelpText>The interest rate paid for the investment value, as a percentage</inlineHelpText>
    <label>Interest To Client (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>