force-app/main/default/objects/Concession__c/fields/Investment_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Product_Type__c</fullName>
    <description>Investment Product Type</description>
    <inlineHelpText>Investment Product Type</inlineHelpText>
    <label>Investment Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Deposit</fullName>
            </value>
            <value>
                <fullName>Notice Deposit</fullName>
            </value>
            <value>
                <fullName>Call Account</fullName>
            </value>
            <value>
                <fullName>Third Party Funds Administration Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>