force-app/main/default/objects/Concession__c/fields/Latest_Risk_Grade_CRS_MRS__c.field-meta.xml
<CustomField>
    <fullName>Latest_Risk_Grade_CRS_MRS__c</fullName>
    <description>Latest Customer Risk Grade</description>
    <inlineHelpText>Latest Customer Risk Grade</inlineHelpText>
    <label>Latest Risk Grade (CRS/MRS)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>