force-app/main/default/objects/Concession__c/fields/Lending_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Lending_Product_Type__c</fullName>
    <description>Lending product type</description>
    <inlineHelpText>Lending product type</inlineHelpText>
    <label>Lending Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Production Loan</fullName>
            </value>
            <value>
                <fullName>Business Revolving Credit Product</fullName>
            </value>
            <value>
                <fullName>Business Term Loan</fullName>
            </value>
            <value>
                <fullName>Commercial Property Finance</fullName>
            </value>
            <value>
                <fullName>Debtors’ Finance</fullName>
            </value>
            <value>
                <fullName>Medium Term Loan</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>VAF Full Maintenance Lease</fullName>
            </value>
            <value>
                <fullName>VAF Installment Sale</fullName>
            </value>
            <value>
                <fullName>VAF Operating Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>