force-app/main/default/objects/Concession__c/fields/Letter_Signed__c.field-meta.xml
<CustomField>
    <fullName>Letter_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter Signed</label>
    <type>Checkbox</type>
</CustomField>