force-app/main/default/objects/Concession__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Who is responsible from the CCM&apos;s for approvals</description>
    <formula>Owner:User.Manager.FirstName + &quot; &quot; + Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Who is responsible from the CCM&apos;s for approvals</inlineHelpText>
    <label>Manager</label>
    <type>Text</type>
</CustomField>