force-app/main/default/objects/Concession__c/fields/Margin_Above_Prime__c.field-meta.xml
<CustomField>
    <fullName>Margin_Above_Prime__c</fullName>
    <description>Rate in relation to prime (value above prime) as a percentage</description>
    <inlineHelpText>Rate in relation to prime (value above prime) as a percentage</inlineHelpText>
    <label>Margin Above Prime (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>