force-app/main/default/objects/Concession__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>Sector client belongs to</description>
    <formula>TEXT(Opportunity__r.Account.Market_Segments__c)</formula>
    <inlineHelpText>Sector client belongs to</inlineHelpText>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>