force-app/main/default/objects/Concession__c/fields/Maximum_Fee__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Fee__c</fullName>
    <description>Maximum fee charged</description>
    <inlineHelpText>Maximum fee charged</inlineHelpText>
    <label>Maximum Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>