force-app/main/default/objects/Concession__c/fields/Merchant_Number__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Number__c</fullName>
    <description>The client’s merchant number</description>
    <inlineHelpText>The client’s merchant number</inlineHelpText>
    <label>Merchant Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>