force-app/main/default/objects/Concession__c/fields/Minimum_Fee__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Fee__c</fullName>
    <description>Minimum fee charged</description>
    <inlineHelpText>Minimum fee charged</inlineHelpText>
    <label>Minimum Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>