force-app/main/default/objects/Concession__c/fields/Modified_By_Pricing_Team__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_Pricing_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags if Pricing Team have edited a concession prior to Approving</description>
    <inlineHelpText>Flags if Pricing Team have edited a concession prior to Approving</inlineHelpText>
    <label>Modified By Pricing Team</label>
    <type>Checkbox</type>
</CustomField>