force-app/main/default/objects/Concession__c/fields/Motivation__c.field-meta.xml
<CustomField>
    <fullName>Motivation__c</fullName>
    <description>Additional, pertinent information needed to support the concessions</description>
    <inlineHelpText>Additional, pertinent information needed to support the concessions</inlineHelpText>
    <label>Motivation</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>