force-app/main/default/objects/Concession__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity the Concession belongs to</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Concessions</relationshipLabel>
    <relationshipName>Concessions</relationshipName>
    <type>Lookup</type>
</CustomField>