force-app/main/default/objects/Concession__c/fields/Pricing_Team_Approver__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Team_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member from the Pricing Team who is responsible for approving this Concession</description>
    <inlineHelpText>Member from the Pricing Team who is responsible for approving this Concession</inlineHelpText>
    <label>Pricing Team Approver</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <errorMessage>Only users from the Pricing Team may be selected</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>CommB Provincial Pricing Division</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Commb Provincial Pricing Gauteng and Non-Metro Team</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Commb Provincial Pricing KwaZulu-Natal Team</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Commb Provincial Pricing Western Cape Team</value>
        </filterItems>
        <infoMessage>Select a Provincial Pricing Team Member</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Concessions</relationshipName>
    <type>Lookup</type>
</CustomField>