force-app/main/default/objects/Concession__c/fields/Product_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Account_Number__c</fullName>
    <description>Account(s) associated with the product; separate multiple account numbers with a comma</description>
    <inlineHelpText>Account(s) associated with the product; separate multiple account numbers with a comma</inlineHelpText>
    <label>Product Account Number</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>