force-app/main/default/objects/Concession__c/fields/Product_Limit__c.field-meta.xml
<CustomField>
    <fullName>Product_Limit__c</fullName>
    <description>Loan size or facility size</description>
    <inlineHelpText>Loan size or facility size</inlineHelpText>
    <label>Product Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>