force-app/main/default/objects/Concession__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-1588 CommB - CMS - 10 - Pricing Team Approves Concession Request</description>
    <label>Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Concessions1</relationshipName>
    <type>Lookup</type>
</CustomField>