force-app/main/default/objects/Concession__c/fields/Review_Extension_Fee__c.field-meta.xml
<CustomField>
    <fullName>Review_Extension_Fee__c</fullName>
    <description>Overdraft Only: Fee charged for every month that a review is extended, as a percentage</description>
    <inlineHelpText>Overdraft Only: Fee charged for every month that a review is extended, as a percentage</inlineHelpText>
    <label>Review Extension Fee (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>