force-app/main/default/objects/Concession__c/fields/Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>Review_Fee__c</fullName>
    <description>Overdraft only: Fee charged on the review of an overdraft facility</description>
    <inlineHelpText>Overdraft only: Fee charged on the review of an overdraft facility</inlineHelpText>
    <label>Review Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>