force-app/main/default/objects/Concession__c/fields/Review_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Fee_Type__c</fullName>
    <description>Overdraft Only: How the Review Fee is paid</description>
    <inlineHelpText>Overdraft Only: How the Review Fee is paid</inlineHelpText>
    <label>Review Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>