force-app/main/default/objects/Concession__c/fields/Risk_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Risk_Group_Name__c</fullName>
    <description>The group name of the client</description>
    <inlineHelpText>The group name of the client</inlineHelpText>
    <label>Risk Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>