force-app/main/default/objects/Concession__c/fields/Risk_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Risk_Group_Number__c</fullName>
    <description>Client Company ID, provided by SMT</description>
    <inlineHelpText>Client Company ID, provided by SMT</inlineHelpText>
    <label>Risk Group Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>